--- a/templates/history.html
+++ b/templates/history.html
@@ -33,36 +33,24 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <h1>Formula 1 Historical Information</h1>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-
-            <li class="nav-item dropdown">
-                <!-- <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Additional Information
-                </a> -->
-                <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDropdown">
-                    <!-- <li><a class="dropdown-item" href="maxtemp.html">Maximum Temperature</a></li>
-                    <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
-                    <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
-                    <li><a class="dropdown-item" href="windspeed.html">Wind Speed</a></li>                                     -->
-                </ul>
-            </li>
     </nav>
+    <div id = "background-here">
+        <div class="container-fluid px-0" id = "hist-graphs">
+            <div class="row justify-content-center">
 
-    <div class="container-fluid px-0" id = "hist-graphs">
-        <div class="row justify-content-center">
-
-            <div class="col-sm-12 col-md-5 graph bg-white" id = "top-drivers">
-                <h4 class="text-center">Top 10 Drivers</h4>
-                <img src="static/images/Top10Drivers.svg" class="img-fluid" title="Top 10 Drivers" alt="Top 10 Drivers">
+                <div class="col-sm-12 col-md-5 graph bg-white" id = "top-drivers">
+                    <h4 class="text-center">Top 10 Drivers</h4>
+                    <img src="static/images/Top10Drivers.svg" class="img-fluid" title="Top 10 Drivers" alt="Top 10 Drivers">
+                </div>
+                <div class="col-sm-12 col-md-5 graph bg-white" id = "top-tracks">
+                    <h4 class="text-center">Top 15 Most Used Tracks</h4>
+                    <img src="static/images/Top15MostusedTracks.svg" class="img-fluid" title="Top 15 Most Used Tracks" alt="Top 15 Most Used Tracks">
+                </div>
+                <div class="col-sm-12 col-md-6 graph bg-white" id = "top-constructors">
+                    <h4 class="text-center">Top 10 Constructors</h4>                
+                    <img src="static/images/Top10Constructors.svg" class="img-fluid" title="Top 10 Constructors" alt="Top 10 Constructors">
+                </div>
             </div>
-            <div class="col-sm-12 col-md-5 graph bg-white" id = "top-tracks">
-                <h4 class="text-center">Top 15 Most Used Tracks</h4>
-                <img src="static/images/Top15MostusedTracks.svg" class="img-fluid" title="Top 15 Most Used Tracks" alt="Top 15 Most Used Tracks">
-            </div>
-            <div class="col-sm-12 col-md-6 graph bg-white" id = "top-constructors">
-                <h4 class="text-center">Top 10 Constructors</h4>                
-                <img src="static/images/Top10Constructors.svg" class="img-fluid" title="Top 10 Constructors" alt="Top 10 Constructors">
-            </div>
-
         </div>
     </div>
 <body>
