--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,10 @@
-/* Remove the default margin and padding from the body. */
-body {
-  padding: 0;
-  margin: 0;
-}
-
-/* Set map, body, and html to 100% of the screen size. */
+/* Set body and html to 100% of the screen size. */
 body,
 html {
   height: 100%;
   margin:0;
   padding:0;
+  /* background-color: #121212; */
 }
 
 .row{
@@ -19,11 +14,10 @@ html {
 .container-fluid{
   margin:0;
   padding:0;
-
 }
 
 #main-graphs {
-  background-color:#121212;
+  /* background-color:#121212; */
   align-items: center;  
 }
 
@@ -58,13 +52,7 @@ html {
   border-bottom: 3px solid #121212;
 }
 
-.box {
-  min-height: 50px;
-  padding: 5px;
-  margin: 2%;
-  font-weight: 800;
-  color: #121212;
-}
+
 
 #Visualizations{
   /* margin: 2%; */
@@ -76,7 +64,7 @@ html {
   border: 2px solid #121212;
   min-height: 300pt;
   margin: 2%;
-  border-radius: 2%
+  border-radius: .5rem;
 }
 
 #driver_standings {
@@ -107,14 +95,34 @@ h3 {
 }
 
 #leaflet-section{
-  background-color:#121212;  
+  /* background-color:#121212;   */
 }
 
 #hist-graphs{
-  background-color:#121212;  
+  /* background-color:#121212;   */
 }
 #top-drivers,
 #top-tracks,
 #top-constructors{
   margin-top: 2%;
+}
+
+#season-info{
+  color: white;
+  /* background-color: #121212; */
+}
+
+#background-here{
+  background-color:#121212; 
+}
+
+#news{
+  background-color: white;
+  /* color: #121212;   */
+  border: 1px solid #121212;
+  min-height: 9rem;
+  padding: 5px;
+  margin: 2%; 
+  font-weight: 800;
+  border-radius: .5rem;
 }
