--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
     <!-- Our rows function in containers (grid created). -->
         <div class="container-fluid" id="currentNews">
             <!--Normally these medium columns go full wide on small screen sizes-->
-            <div class="row">
+            <div class="row" id="table">
             <div class="col-md-3">
                 <div class="box" id ="news">
                     <p class = "text-center"><a href = "https://www.formula1.com/">Formula 1</a> Featured Article:</p>                  
